# clean-actix-api

./: .env.example  Cargo.toml  README.md
src/: container.rs  create_app.rs  main.rs
src/api/: middleware.rs
src/api/controllers/: mod.rs  service_context_handlers.rs  todo_handler.rs
src/api/dto/: todo.rs
src/domain/services/: mod.rs  todo.rs
src/infrastructure/databases/: postgresql.rs
src/infrastructure/models/: todo.rs
src/infrastructure/repositories/: todo.rs
src/tests/api/: test_todo_controllers.rs
