[package]
name = "clean-actix-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
actix-web = "4"
actix-threadpool = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2.12", features = [
	"postgres",
	"r2d2",
	"chrono",
	"serde_json",
] }
diesel_migrations = "2.2.0"
async-trait = "0.1.58"
dotenvy = { version = "0.15" }
env_logger = "0.11.8"
log = "0.4"
futures-util = "0.3.26"

[dev-dependencies]
testcontainers = { version = "0.24.0" }
testcontainers-modules = { version = "0.12.1", features = ["postgres"] }
